--- a/scss/_main-content.scss
+++ b/scss/_main-content.scss
@@ -3,8 +3,9 @@
 main {
   @include grid(main);
   color: #535353;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 h2, h3 {
